...
        <item>"aayat</item>
    </string-array>
    <string name="sign_up_button_description">Sign up</string>
    <string name="log_in_button_description">Log in</string>
    <string name="skip_button_description">Skip for now</string>
    <string name="welcome_to_harmonix">Welcome\n\nto\n\nHarmonix …</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="log_in_button2">Log in</string>
    <string name="User_or_email">Username or email address</string>
    <string name="go_back">Go Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="account">Account</string>
    <string name="radio">Radio</string>
    <string name="home">Home</string>
    <string name="title_activity_music_player">MusicPlayerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
...
