...
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="16dp"
        android:drawSelectorOnTop="false"
        android:divider="@android:color/transparent"
        android:layout_above="@id/createPlaylistButton"
        android:layout_alignParentTop="true"
        android:dividerHeight="35.0sp" />


    <Button
        android:id="@+id/createPlaylistButton"
...
android:layout_height="match_parent"
tools:context=".PresentationLayer.Library.Playlists">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerView"
        android:background="@color/white"/>

    <Button
        android:id="@+id/addPlaylistButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
