...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#95DAD5BE"
    tools:context=".PresentationLayer.MusicPlayer.MusicPlayerActivity">

    <ImageView
        android:id="@+id/exit_button"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/back_arrow" />

...

        </RelativeLayout>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
...
