<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item1"
        android:title="Add to Playlist" />
    <item
        android:id="@+id/item2"
        android:title="Add to 🖤 Artists" />
    <item
        android:id="@+id/item3"
        android:title="Add to 🖤 Songs" />
    <item
        android:id="@+id/item4"
        android:title="Download" />
    <item
        android:id="@+id/item5"
        android:title="Add to Queue" />
</menu>