...
    android:layout_height="match_parent"
    tools:context=".PresentationLayer.Library.DownloadsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerView"
        android:background="@color/white"/>

</RelativeLayout>
